--- a/infrastructure/tasks/deploy-routing.yml
+++ b/infrastructure/tasks/deploy-routing.yml
@@ -4,7 +4,7 @@ platform: linux
 image: docker:///cloudfoundry/cli-vagrant-ci
 
 params:
-  LITE_PRIVATE_IP_ADDRESS:
+  LITE_IP_ADDRESS:
   LITE_HOSTNAME:
 
 inputs:
@@ -32,7 +32,7 @@ run:
     diego_deployment_name=cf-warden-diego
     diego_deployment_file=cf-warden-diego.yml
 
-    bosh -n target $LITE_PRIVATE_IP_ADDRESS
+    bosh -n target $LITE_IP_ADDRESS
 
     bosh -n -u $ADMIN_USER -p $ADMIN_PASSWORD upload release cf-routing-release/release.tgz --skip-if-exists
 
