--- a/cli/tasks/create-installers.yml
+++ b/cli/tasks/create-installers.yml
@@ -85,8 +85,6 @@ run:
         cat cf-cli.spec.template >> cf-cli.spec
         rpmbuild --target i386 --define "_topdir $(pwd)/build" -bb cf-cli.spec
         mv build/RPMS/i386/cf-cli*.rpm $root/archives/cf-cli-installer_i686.rpm
-        rpmsign --addsign $root/archives/cf-cli-installer_i686.rpm
-        rm -rf build cf cf-cli.spec
       popd
     )
 
@@ -98,8 +96,6 @@ run:
         cat cf-cli.spec.template >> cf-cli.spec
         rpmbuild --target x86_64 --define "_topdir $(pwd)/build" -bb cf-cli.spec
         mv build/RPMS/x86_64/cf-cli*.rpm $root/archives/cf-cli-installer_x86-64.rpm
-        rpmsign --addsign $root/archives/cf-cli-installer_x86-64.rpm
-        rm -rf build cf cf-cli.spec
       popd
     )
 
@@ -122,27 +118,18 @@ run:
         mkbom -i bom_list Bom
         mv Bom Payload com.cloudfoundry.cli.pkg
         xar -c --compression none -f cf-cli-installer_osx.pkg com.cloudfoundry.cli.pkg Distribution
-
-        f=cf-cli-installer_osx.pkg
-        xar --sign -f $f \
-            --digestinfo-to-sign digestinfo.dat \
-            --sig-size `cat $root/cli-private/certs/siglen.txt` \
-            --cert-loc $root/cli-private/certs/Developer\ ID\ Installer_\ Cloudfoundry.org\ Foundation\,\ Inc\ \(ZS92ETKJX7\).cer \
-            --cert-loc $root/cli-private/certs/Developer\ ID\ Certification\ Authority.cer
-
-        openssl rsautl -sign \
-            -inkey $root/cli-private/certs/developer-id-installer-private-key.pem \
-            -in digestinfo.dat \
-            -out signature.dat
-        xar --inject-sig signature.dat -f $f
-
         mv cf-cli-installer_osx.pkg $root/archives/cf-cli-installer_osx.pkg
-        rm -rf cf-cli com.cloudfoundry.cli.pkg/Payload com.cloudfoundry.cli.pkg/Bom bom_list
       popd
     )
 
-    echo "Packaging Installers"
-    (
-      cd installers
-      tar cvzf cf-cli-installers.tgz -C $root/archives .
-    )
+    pushd cf-cli-binaries
+      tar --transform="flags=r;s|cf-cli_osx|cf|" -czf $root/archives/cf-cli_edge_osx.tgz cf-cli_osx
+      tar --transform="flags=r;s|cf-cli_linux_i686|cf|" -czf $root/archives/cf-cli_edge_linux_i686.tgz cf-cli_linux_i686
+      tar --transform="flags=r;s|cf-cli_linux_x86-64|cf|" -czf $root/archives/cf-cli_edge_linux_x86-64.tgz cf-cli_linux_x86-64
+
+      mkdir win32 win64
+      mv cf-cli_win32.exe win32/cf.exe
+      mv cf-cli_winx64.exe win64/cf.exe
+      zip -j $root/archives/cf-cli_edge_win32.zip win32/cf.exe
+      zip -j $root/archives/cf-cli_edge_win64.zip win64/cf.exe
+    popd
