move installers and VERSION into ci directory
[#130691251]

Signed-off-by: Jeff Pak <jeffrey.pak@emc.com>

--- a/ci/cli/pipeline.yml
+++ b/ci/cli/pipeline.yml
@@ -23,7 +23,7 @@ resources:
     private_key: {{cf-cli-eng-github-private-key}}
     branch: master
     paths:
-    - VERSION
+    - ci/VERSION
 
 - name: cli-private
   type: git
