--- a/cli/pipeline.yml
+++ b/cli/pipeline.yml
@@ -23,7 +23,7 @@ resources:
     private_key: {{cf-cli-eng-github-private-key}}
     branch: master
     paths:
-    - VERSION
+    - ci/VERSION
 
 - name: cli-private
   type: git
