--- a/cli/tasks/create-installers.yml
+++ b/cli/tasks/create-installers.yml
@@ -3,13 +3,12 @@ platform: linux
 image: docker:///cloudfoundry/cli-ci
 
 inputs:
-- name: cf-cli-binaries
-- name: cli-private
-- name: cli
 - name: cli-ci
+- name: cli-private
+- name: extracted-binaries
 
 outputs:
-- name: archives
+- name: packaged
 
 run:
   path: bash
@@ -25,21 +24,17 @@ run:
     CF CLI Team <cf-cli-eng@pivotal.io>
     EOF
 
-    pushd cf-cli-binaries
-       tar xvf cf-cli-binaries.tgz
-    popd
-
     VERSION=$(cat cli-ci/ci/VERSION)
     RPM_VERSION=$(echo $VERSION | sed 's/-/_/')
 
     echo "Building 32-bit Debian package"
     (
-        SIZE="$(BLOCKSIZE=1000 du $root/cf-cli-binaries/cf-cli_linux_i686 | cut -f 1)"
+        SIZE="$(BLOCKSIZE=1000 du $root/extracted-binaries/cf-cli_linux_i686 | cut -f 1)"
 
         pushd cli-ci/ci/installers/deb
           mkdir -p cf/usr/bin
 
-          cp $root/cf-cli-binaries/cf-cli_linux_i686 cf/usr/bin/cf
+          cp $root/extracted-binaries/cf-cli_linux_i686 cf/usr/bin/cf
 
           cp control.template cf/DEBIAN/control
           echo "Installed-Size: ${SIZE}" >> cf/DEBIAN/control
@@ -47,19 +42,18 @@ run:
           echo "Architecture: i386" >> cf/DEBIAN/control
 
           fakeroot dpkg --build cf cf-cli-installer_i686.deb
-          mv cf-cli-installer_i686.deb $root/archives
-          rm -rf cf/usr/bin cf/DEBIAN/control
+          mv cf-cli-installer_i686.deb $root/packaged
         popd
     )
 
     echo "Building 64-bit Debian package"
     (
-        SIZE="$(BLOCKSIZE=1000 du $root/cf-cli-binaries/cf-cli_linux_x86-64 | cut -f 1)"
+        SIZE="$(BLOCKSIZE=1000 du $root/extracted-binaries/cf-cli_linux_x86-64 | cut -f 1)"
 
         pushd cli-ci/ci/installers/deb
           mkdir -p cf/usr/bin
 
-          cp $root/cf-cli-binaries/cf-cli_linux_x86-64 cf/usr/bin/cf
+          cp $root/extracted-binaries/cf-cli_linux_x86-64 cf/usr/bin/cf
 
           cp control.template cf/DEBIAN/control
           echo "Installed-Size: ${SIZE}" >> cf/DEBIAN/control
@@ -67,43 +61,42 @@ run:
           echo "Architecture: amd64" >> cf/DEBIAN/control
 
           fakeroot dpkg --build cf cf-cli-installer_x86-64.deb
-          mv cf-cli-installer_x86-64.deb $root/archives
-          rm -rf cf/usr/bin cf/DEBIAN/control
+          mv cf-cli-installer_x86-64.deb $root/packaged
         popd
     )
 
     echo "Building 32-bit RedHat package"
     (
       pushd cli-ci/ci/installers/rpm
-        cp $root/cf-cli-binaries/cf-cli_linux_i686 cf
+        cp $root/extracted-binaries/cf-cli_linux_i686 cf
         echo "Version: ${RPM_VERSION}" > cf-cli.spec
         cat cf-cli.spec.template >> cf-cli.spec
         rpmbuild --target i386 --define "_topdir $(pwd)/build" -bb cf-cli.spec
-        mv build/RPMS/i386/cf-cli*.rpm $root/archives/cf-cli-installer_i686.rpm
+        mv build/RPMS/i386/cf-cli*.rpm $root/packaged/cf-cli-installer_i686.rpm
       popd
     )
 
     echo "Building 64-bit RedHat package"
     (
       pushd cli-ci/ci/installers/rpm
-        cp $root/cf-cli-binaries/cf-cli_linux_x86-64 cf
+        cp $root/extracted-binaries/cf-cli_linux_x86-64 cf
         echo "Version: ${RPM_VERSION}" > cf-cli.spec
         cat cf-cli.spec.template >> cf-cli.spec
         rpmbuild --target x86_64 --define "_topdir $(pwd)/build" -bb cf-cli.spec
-        mv build/RPMS/x86_64/cf-cli*.rpm $root/archives/cf-cli-installer_x86-64.rpm
+        mv build/RPMS/x86_64/cf-cli*.rpm $root/packaged/cf-cli-installer_x86-64.rpm
       popd
     )
 
     echo "Building OS X installer"
     (
-      SIZE="$(BLOCKSIZE=1000 du $root/cf-cli-binaries/cf-cli_osx | cut -f 1)"
+      SIZE="$(BLOCKSIZE=1000 du $root/extracted-binaries/cf-cli_osx | cut -f 1)"
 
       pushd cli-ci/ci/installers/osx
         sed -i -e "s/VERSION/${VERSION}/g" Distribution
         sed -i -e "s/SIZE/${SIZE}/g" Distribution
         mkdir -p cf-cli/usr/local/bin
         mkdir -p cf-cli/usr/local/share/doc/cf-cli
-        cp $root/cf-cli-binaries/cf-cli_osx cf-cli/usr/local/bin/cf
+        cp $root/extracted-binaries/cf-cli_osx cf-cli/usr/local/bin/cf
         cp COPYING cf-cli/usr/local/share/doc/cf-cli
         chmod -R go-w cf-cli
         pushd cf-cli
@@ -113,18 +106,6 @@ run:
         mkbom -i bom_list Bom
         mv Bom Payload com.cloudfoundry.cli.pkg
         xar -c --compression none -f cf-cli-installer_osx.pkg com.cloudfoundry.cli.pkg Distribution
-        mv cf-cli-installer_osx.pkg $root/archives/cf-cli-installer_osx.pkg
+        mv cf-cli-installer_osx.pkg $root/packaged/cf-cli-installer_osx.pkg
       popd
     )
-
-    pushd cf-cli-binaries
-      tar --transform="flags=r;s|cf-cli_osx|cf|" -czf $root/archives/cf-cli_edge_osx.tgz cf-cli_osx
-      tar --transform="flags=r;s|cf-cli_linux_i686|cf|" -czf $root/archives/cf-cli_edge_linux_i686.tgz cf-cli_linux_i686
-      tar --transform="flags=r;s|cf-cli_linux_x86-64|cf|" -czf $root/archives/cf-cli_edge_linux_x86-64.tgz cf-cli_linux_x86-64
-
-      mkdir win32 win64
-      mv cf-cli_win32.exe win32/cf.exe
-      mv cf-cli_winx64.exe win64/cf.exe
-      zip -j $root/archives/cf-cli_edge_win32.zip win32/cf.exe
-      zip -j $root/archives/cf-cli_edge_winx64.zip win64/cf.exe
-    popd
