--- a/ci/cli-release/pipeline.yml
+++ b/ci/cli-release/pipeline.yml
@@ -138,9 +138,11 @@ jobs:
       params:
         CERT_COMMON_NAME: {{osx-certificate-common-name}}
         CERT_LOCATION: {{osx-certificate-location}}
-        CERT_PASSWORD: {{osx-certificate-password}}
+        CERT_PASSWORD_LOCATION: {{osx-certificate-password-location}}
     - task: sign-redhat-installers
       file: cli-ci/ci/cli-release/tasks/redhat-installers.yml
+      params:
+        GPG_KEY_LOCATION: {{osx-certificate-location}}
 #   - do:
 #     - task: sign-windows-binaries
 #       file: cli-ci/ci/cli-release/tasks/sign-windows-binaries.yml
