--- a/ci/cli-release/tasks/sign-osx-installer.yml
+++ b/ci/cli-release/tasks/sign-osx-installer.yml
@@ -6,7 +6,7 @@ image: docker:///cloudfoundry/cli-ci
 params:
   CERT_COMMON_NAME:
   CERT_LOCATION:
-  CERT_PASSWORD:
+  CERT_PASSWORD_LOCATION:
 
 inputs:
 - name: certificates
@@ -24,6 +24,7 @@ run:
     set -ex
 
     VERSION=$(cat cli-ci/ci/VERSION)
+    CERT_PASSWORD=$(cat certificates/$CERT_PASSWORD_LOCATION)
 
     security create-keychain -p "" temp-keychain
     security import certificates/$CERT_LOCATION -k temp-keychain -T "$(which productsign)" -P "$CERT_PASSWORD"
