use expect to hit enter on gpg prompt
[#130542755]

--- a/ci/cli-release/tasks/sign-redhat-installers.yml
+++ b/ci/cli-release/tasks/sign-redhat-installers.yml
@@ -21,17 +21,30 @@ run:
   - -c
   - |
     set -ex
+    cat<<EOF >sign-rpm
+      #!/usr/bin/env expect -f
+      spawn rpmsign --addsign {*}$argv
+      expect -exact "Enter pass phrase: "
+      send -- "\r"
+      expect eof
+    EOF
+    chmod 700 sign-rpm
 
     VERSION=$(cat cli-ci/ci/VERSION)
 
+    cat<< EOF >~/.rpmmacros
+    %_gpg_name CF CLI Team <cf-cli-eng@pivotal.io>
+    EOF
+
     mkdir gpg-dir
     export GNUPGHOME=$PWD/gpg-dir
+    chmod 700 $GNUPGHOME
     trap "rm -rf $GNUPGHOME" 0
 
     gpg --import certificates/$GPG_KEY_LOCATION
 
-    rpmsign --addsign --define "_gpg_name CF CLI Team <cf-cli-eng@pivotal.io>" edge-redhat-installer-32/cf-cli-installer_i686.rpm
-    rpmsign --addsign --define "_gpg_name CF CLI Team <cf-cli-eng@pivotal.io>" edge-redhat-installer-64/cf-cli-installer_x86-64.rpm
+    ./sign-rpm edge-redhat-installer-32/cf-cli-installer_edge_i686.rpm
+    ./sign-rpm edge-redhat-installer-64/cf-cli-installer_edge_x86-64.rpm
 
-    mv edge-redhat-installer-32/cf-cli-installer_i686.rpm signed-redhat-installer/cf-cli-installer_${VERSION}_i686.rpm
-    mv edge-redhat-installer-64/cf-cli-installer_x86-64.rpm signed-redhat-installer/cf-cli-installer_${VERSION}_x86-64.rpm
+    mv edge-redhat-installer-32/cf-cli-installer_edge_i686.rpm signed-redhat-installer/cf-cli-installer_${VERSION}_i686.rpm
+    mv edge-redhat-installer-64/cf-cli-installer_edge_x86-64.rpm signed-redhat-installer/cf-cli-installer_${VERSION}_x86-64.rpm
