upload to new-release-process for temporary testing
[#130542755]

--- a/ci/cli-release/tasks/upload-releases.yml
+++ b/ci/cli-release/tasks/upload-releases.yml
@@ -22,10 +22,8 @@ run:
   - |
     set -ex
 
-    VERSION=$(cat cli-ci/ci/VERSION)
-
-    ls repackaged-binaries-and-installers signed-osx-installer signed-redhat-installer
-    exit 1
+    #VERSION=$(cat cli-ci/ci/VERSION)
+    VERSION="new-release-process"
 
     aws s3 cp repackaged-binaries-and-installers/ s3://cf-cli-releases/releases/v${VERSION}/ --recursive
     aws s3 cp signed-osx-installer/ s3://cf-cli-releases/releases/v${VERSION}/ --recursive
